# channels-chat

./: .gitignore  Pipfile  pyproject.toml
django/chat/: admin.py  consumers.py  forms.py  models.py  tasks.py  validators.py  views.py
django/chat/migrations/: 0001_initial.py
django/chat/templates/: index.djhtml  room.djhtml
django/config/: routing.py  settings.py  urls.py
django/templates/: base.djhtml
