[tool.poetry]
name = "channels-chat"
version = "0.1.0"
description = ""
authors = ["Yevhen Shymotyuk <fly1ngDream@protonamil.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "*"
channels-redis = "*"
selenium = "*"
webdriver-manager = "*"
django-crispy-forms = "*"
python-slugify = "*"
django-celery-results = "*"
redis = "*"
python-dotenv = "*"
channels = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
